--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/isume295/To_Do_list#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.21.5",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.3",
